...
        Button(
            onClick = {
                navigation.navigateTo(Screens.LOGIN.route)
            },
            modifier = Modifier
                .fillMaxWidth()
                .testTag("authorizationButtonTest")) {
            Text("Authorization")
        }
        Button(
            onClick = {
                navigation.navigateTo(Screens.REGISTER.route)
            },
...
